Started building out map

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Super Box Crate</title>
+    <link rel="icon" sizes="32x32" type="image/png" href="./icons8-apple-arcade-32.png"> 
+  </head>
   <body>
     <canvas id="canvas1" height="800" width="800"></canvas>
 
-    <script src="main.js" type="module" defer></script>
+    <script src="./main.js" type="module" defer></script>
+    <br>
+    <a target="_blank" href="https://icons8.com/icon/GdTfmvALOWwB/apple-arcade">Game</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
   </body>
 </html>
